<resources>
    <string name="app_name">Irdest</string>
    <string name="title_activity_login">Join Irdest</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">Welcome to Irdest!</string>

    <string name="button_login">Login</string>

    <string name="title_chat">Chat</string>
    <string name="title_voice">Voice</string>
    <string name="title_files">Files</string>
    <string name="title_users">Users</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="chatroom_send_hint">Enter chat message</string>
    <string name="chatroom_send">Send</string>
    <string name="placeholder_chatroom_name">Chat Room Name</string>
    <string name="placeholder_chatroom_timestamp">2020-05-31 13:12</string>

    <string name="peering_button_connect">Connect</string>
    <string name="peering_button_disconnect">Disconnect</string>
    <string name="peering_server_hint"><![CDATA[Server <ip>:<port>]]></string>
    <string name="users_all">All Users</string>
    <string name="users_friends">Friends</string>
    <string name="placeholder_username">Katharina Fey</string>
    <string name="placeholder_last_seen">Last seen: 25. June 2020 07:58</string>
    <string name="button_register">Register</string>

    <string name="register_hello">Create user identity</string>
    <string name="register_hello2">All user identities in Irdest are cryptographically random. For people to know who you are you will need to set a handle and/or name. But note: this is optional! The app is perfectly usable if you\'re just a number</string>
    <string name="prompt_handle">\@handle(optional)</string>
    <string name="prompt_name">Display Name(optional)</string>
    <string name="placeholder_id">5555-4444-3333-2222-1111-ACAB</string>
    <string name="placeholder_handle">\@spacekookie</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="register_info">New to network? Register!</string>
    <string name="server_config">Configure Server</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
