<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="st.irde.app.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_voice"
        android:name="st.irde.app.ui.voice.VoiceFragment"
        android:label="@string/title_voice"
        tools:layout="@layout/fragment_voice" />

    <fragment
        android:id="@+id/navigation_files"
        android:name="st.irde.app.ui.files.FileFragment"
        android:label="@string/title_files"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="st.irde.app.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" />
</navigation>
