<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:context=".ui.login.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            app:layout_constraintTop_toTopOf="@id/login_container_layout"
            app:layout_constraintLeft_toLeftOf="@id/login_container_layout"
            app:layout_constraintRight_toRightOf="@id/login_container_layout"
            android:layout_marginTop="@dimen/margin_very_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="180dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/user_list_picker"/>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/user_list_picker"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
            android:id="@+id/button_login"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
            android:text="@string/server_config"/>

        <TextView
            android:id="@+id/invite_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintLeft_toLeftOf="@id/button_register"
            android:text="@string/register_info"
            android:layout_marginTop="@dimen/margin_medium"
            />

        <Button
            app:layout_constraintTop_toBottomOf="@id/invite_to_register"
            android:id="@+id/button_register"
            android:layout_marginTop="@dimen/margin_very_small"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
